Refatorado CDU14IntegrationTest para corrigir falhas de segurança
- Substituído o @MockBean depreciado por @MockitoBean.
- Mockado o SgrhService para fornecer perfis de usuário, corrigindo erros 403.
- Restaurada a configuração do 'titular' da unidade para corrigir erros 500.
- Refatorada a configuração do teste para melhor isolamento entre os testes.